[tool.poetry]
name = "with-poetry"
version = "0.1.0"
description = ""
authors = ["Kropotova.S.M <Kropotova.S.M@yandex.ru >"]
readme = "README.md"
packages = [{include = "tests"}]

[tool.poetry.dependencies]
python = "^3.9"
selene = "2.0.0rc2"
selenium = "4.4.3"
pytest = "^7.3.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
